--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       .navigation, .pitch, .section1, .section2, .faq, .footer {
         padding: 10px 0px 10px 0px;
       }
-      video, .thermometer, .order, .social {
+     .video, .thermometer, .order, .social {
         border: 1px dotted;
         text-align: center;
       }
@@ -42,10 +42,10 @@
       <div class="span2 logo">
 	Logo
       </div>
-      <div class="span6 logo">
+      <div class="span6 blank">
 	Blank
       </div>
-      <div class="span4 logo">
+      <div class="span4 about">
 	About
       </div>
     </div>
