Alt added in index.html

--- a/index.html
+++ b/index.html
@@ -181,16 +181,16 @@
 			<!-- Carousel items -->
 			<div class="carousel-inner">
 				<div class="active item">
-					<div class="carousel-full"><img src="http://i.imgur.com/uZTliZa.jpg" alt=""></div>
-					<div class="carousel-mobile"><img src="http://i.imgur.com/IIdJHML.jpg" alt=""></div>
+					<div class="carousel-full"><img src="http://i.imgur.com/uZTliZa.jpg" alt="Placeholder"></div>
+					<div class="carousel-mobile"><img src="http://i.imgur.com/IIdJHML.jpg" alt="Placeholder"></div>
 				</div>
 				<div class="item">
-					<div class="carousel-full"><img src="http://i.imgur.com/TRBfWqZ.jpg" alt=""></div>
-					<div class="carousel-mobile"><img src="http://i.imgur.com/XTw8ahk.jpg" alt=""></div>
+					<div class="carousel-full"><img src="http://i.imgur.com/TRBfWqZ.jpg" alt="Placeholder"></div>
+					<div class="carousel-mobile"><img src="http://i.imgur.com/XTw8ahk.jpg" alt="Placeholder"></div>
 				</div>
 				<div class="item">
-					<div class="carousel-full"><img src="http://i.imgur.com/1gwaDni.jpg" alt=""></div>
-					<div class="carousel-mobile"><img src="http://i.imgur.com/iJd6z6a.jpg" alt=""></div>
+					<div class="carousel-full"><img src="http://i.imgur.com/1gwaDni.jpg" alt="Placeholder"></div>
+					<div class="carousel-mobile"><img src="http://i.imgur.com/iJd6z6a.jpg" alt="Placeholder"></div>
 				</div>
 			</div>
 		</div>
