--- a/index.html
+++ b/index.html
@@ -17,13 +17,6 @@
           rel="stylesheet" type="text/css"> 
 	
 
-<!--
-	<link rel="stylesheet" href="css1.css">
-	<link rel="stylesheet" href="css2.css">
-	<script src="js1.js"></script>
-	<script src="js2.js"></script>	 
- -->
-	
     <style type="text/css">
 		@media (min-width: 980px) {
 			body {
@@ -140,7 +133,25 @@
 		.social {
 			padding-top: 10px;
 		}
+
+		div.addthis_toolbox {
+		width:180px;
+		margin: 0 auto;
+		}
+
     </style>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-43038965-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+
   </head>
 <body>
 
@@ -213,14 +224,22 @@
 			The best way to promote your synth is to let users hear it. Besides generating patches, Mighty Knob also suggests synths to users and lead them to your web shop or a product page. <a href="mailto:marketing@mightyknob.com">Contact us</a> and join in!
 			</span>
 		</div>
-		<div class="span3">
-			<span class="smallheading"><h4>Spread the word</h4></span>
-			<span>
-			Collaboration with more VST developers will make Mighty Knob even mightier. So, don't hesitate to spread the word!
-			</span>
-			<div class="social">
-				<button class="btn btn-twitter"><i class="icon-twitter"></i> Twitter</button>
-				<button class="btn btn-facebook"><i class="icon-facebook"></i> Facebook</button>	
+
+		<div class="span3"><span class="smallheading"><h4>Spread the word</h4></span>		<div class="social">
+				  <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+    <a class="addthis_button_preferred_1"></a>
+    <a class="addthis_button_preferred_2"></a>
+    <a class="addthis_button_compact"></a>
+    <a class="addthis_counter addthis_bubble_style"></a>
+  </div>
+   <script type="text/javascript">var addthis_config = 
+    {"data_track_addressbar":true};</script>
+   <script type="text/javascript" 
+           src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52029be9663cce00"></script>	
+</div><div class="social"> <a class="coinbase-button" data-code="b65d37586a4fd562bf1b3c02d7bddd96" data-button-style="donation_large" href="https://coinbase.com/checkouts/b65d37586a4fd562bf1b3c02d7bddd96">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
+
+
 			</div>
 		</div>
     </div>
